Acknowledge Joost Kremers and Jeff Valk in light of commit 5cf576e

--- a/README.org
+++ b/README.org
@@ -172,8 +172,8 @@ matters.
 
 + Author/maintainer :: Protesilaos Stavrou.
 
-+ Ideas and/or user feedback :: Damien Cassou, Peter Prevos, Samuel
-  Flint, gitrh95, hapst3r.
++ Ideas and/or user feedback :: Damien Cassou, Jeff Valk, Joost
+  Kremers, Peter Prevos, Samuel Flint, gitrh95, hapst3r.
 
 * COPYING
 :PROPERTIES:
