--- a/README.org
+++ b/README.org
@@ -153,12 +153,13 @@ Everything is in place to set up the package.
 :END:
 
 #+begin_src emacs-lisp
-(require 'consult-denote)
-
-(define-key global-map (kbd "C-c n f") #'consult-denote-find)
-(define-key global-map (kbd "C-c n g") #'consult-denote-grep)
-
-(consult-denote-mode 1)
+(use-package consult-denote
+  :ensure t
+  :bind
+  (("C-c n f" . consult-denote-find)
+   ("C-c n g" . consult-denote-grep))
+  :config
+  (consult-denote-mode 1))
 #+end_src
 
 * Acknowledgements
