--- a/README.org
+++ b/README.org
@@ -173,9 +173,9 @@ matters.
 
 + Author/maintainer :: Protesilaos Stavrou.
 
-+ Ideas and/or user feedback :: Damien Cassou, Jeff Valk, Joost
-  Kremers, Kai von Fintel, Peter Prevos, Samuel Flint, gitrh95,
-  hapst3r.
++ Contributions, ideas, and/or user feedback :: Damien Cassou,
+  Gianluca Della Vedova, Jeff Valk, Joost Kremers, Kai von Fintel,
+  Peter Prevos, Samuel Flint, gitrh95, hapst3r.
 
 * COPYING
 :PROPERTIES:
