--- a/README.org
+++ b/README.org
@@ -175,7 +175,7 @@ matters.
 
 + Contributions, ideas, and/or user feedback :: Damien Cassou,
   Gianluca Della Vedova, Jeff Valk, Joost Kremers, Kai von Fintel,
-  Peter Prevos, Samuel Flint, gitrh95, hapst3r.
+  Peter Prevos, Samuel Flint, gitrh95, hapst3r, johkneisl.
 
 * COPYING
 :PROPERTIES:
